[gd_scene load_steps=81 format=3 uid="uid://b50jbwwdxkb52"]

[ext_resource type="Script" path="res://Scenes/player/player.gd" id="1_08n36"]
[ext_resource type="Texture2D" uid="uid://bmk1x3uu43gxf" path="res://Assets/player/player.png" id="2_m54qx"]
[ext_resource type="Texture2D" uid="uid://cs0cj27yy8y60" path="res://Assets/player/shield.png" id="3_v4esw"]
[ext_resource type="Texture2D" uid="uid://jjvrpxg3d6n0" path="res://Assets/player/Explosion.png" id="4_l3imt"]
[ext_resource type="AudioStream" uid="uid://d02b3gpla8oxm" path="res://Scenes/player/sfxThrust.wav" id="5_vkqyy"]
[ext_resource type="AudioStream" uid="uid://c81kcsvop0n7n" path="res://Scenes/player/sfxIdle.wav" id="6_bqul1"]
[ext_resource type="AudioStream" uid="uid://men8il8gj5bv" path="res://Scenes/player/sfxShoot.wav" id="7_pxded"]
[ext_resource type="AudioStream" uid="uid://d2tjbohd2uvvr" path="res://Scenes/player/sfxExplosion.wav" id="8_t2yyb"]
[ext_resource type="AudioStream" uid="uid://brb2wijkgwc3t" path="res://Scenes/player/sfxStopShoot.wav" id="9_4sqq7"]
[ext_resource type="AudioStream" uid="uid://dk4kcslhqhlwp" path="res://Scenes/player/sfxShield.wav" id="10_g6tl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4elll"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjkqm"]
atlas = ExtResource("2_m54qx")
region = Rect2(96, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4usj"]
atlas = ExtResource("2_m54qx")
region = Rect2(48, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2dqb"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi3gy"]
atlas = ExtResource("2_m54qx")
region = Rect2(48, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qlii"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_1irqh"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_bln7s"]
atlas = ExtResource("2_m54qx")
region = Rect2(48, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi8vm"]
atlas = ExtResource("2_m54qx")
region = Rect2(96, 0, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpnnp"]
atlas = ExtResource("2_m54qx")
region = Rect2(48, 116, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_edbvm"]
atlas = ExtResource("2_m54qx")
region = Rect2(96, 116, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh03n"]
atlas = ExtResource("2_m54qx")
region = Rect2(48, 58, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf0dy"]
atlas = ExtResource("2_m54qx")
region = Rect2(96, 58, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rtk"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 116, 48, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4qfw"]
atlas = ExtResource("2_m54qx")
region = Rect2(0, 58, 48, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_r47vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4elll")
}],
"loop": false,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjkqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4usj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2dqb")
}],
"loop": false,
"name": &"stop",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi3gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qlii")
}],
"loop": true,
"name": &"thrustBackward",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1irqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bln7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi8vm")
}],
"loop": false,
"name": &"thrustForward",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpnnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edbvm")
}],
"loop": false,
"name": &"thrustLeft",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh03n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf0dy")
}],
"loop": false,
"name": &"thrustRight",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rtk")
}],
"loop": false,
"name": &"turnLeft",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4qfw")
}],
"loop": false,
"name": &"turnRight",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xa0a6"]
radius = 5.40018
height = 12.0781

[sub_resource type="AtlasTexture" id="AtlasTexture_dqo4p"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m2up"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l164"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_apedf"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpec4"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_61vsg"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_imf4q"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_melxv"]
atlas = ExtResource("4_l3imt")
region = Rect2(4136, 0, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekfxs"]
atlas = ExtResource("4_l3imt")
region = Rect2(0, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyhwy"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y2ha"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_psqrm"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_isfp2"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_k62rd"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg7cu"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tc85"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j65o"]
atlas = ExtResource("4_l3imt")
region = Rect2(4136, 517, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu66g"]
atlas = ExtResource("4_l3imt")
region = Rect2(0, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0xpy"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tba6"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3wrh"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c5qx"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbmi"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx50s"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_brqer"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5jxp"]
atlas = ExtResource("4_l3imt")
region = Rect2(4136, 1034, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkb6p"]
atlas = ExtResource("4_l3imt")
region = Rect2(0, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6eun"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l5ff"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjto7"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk8ve"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vu0f"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_oepmw"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_uflht"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fpoa"]
atlas = ExtResource("4_l3imt")
region = Rect2(4136, 1551, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcx2h"]
atlas = ExtResource("4_l3imt")
region = Rect2(0, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8tec"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmvsq"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_7voy4"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_n41f1"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dby5"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv538"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm1kq"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_niu1p"]
atlas = ExtResource("4_l3imt")
region = Rect2(4136, 2068, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh8cq"]
atlas = ExtResource("4_l3imt")
region = Rect2(0, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_nms45"]
atlas = ExtResource("4_l3imt")
region = Rect2(517, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_x62ov"]
atlas = ExtResource("4_l3imt")
region = Rect2(1034, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk4d0"]
atlas = ExtResource("4_l3imt")
region = Rect2(1551, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdcif"]
atlas = ExtResource("4_l3imt")
region = Rect2(2068, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu2i3"]
atlas = ExtResource("4_l3imt")
region = Rect2(2585, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_gph7f"]
atlas = ExtResource("4_l3imt")
region = Rect2(3102, 2585, 517, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_l404o"]
atlas = ExtResource("4_l3imt")
region = Rect2(3619, 2585, 517, 517)

[sub_resource type="SpriteFrames" id="SpriteFrames_f4rvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqo4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m2up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l164")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apedf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpec4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61vsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imf4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_melxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekfxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyhwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y2ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isfp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k62rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg7cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tc85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j65o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu66g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0xpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tba6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3wrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c5qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx50s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brqer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5jxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkb6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6eun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l5ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjto7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk8ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vu0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oepmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uflht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fpoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcx2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8tec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmvsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7voy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n41f1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dby5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv538")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm1kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niu1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh8cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nms45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x62ov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk4d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdcif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu2i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gph7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l404o")
}],
"loop": false,
"name": &"explode",
"speed": 60.0
}]

[node name="player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(457, 1000)
scale = Vector2(2.65388, 3.31182)
script = ExtResource("1_08n36")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6.70552e-07, 0.905838)
sprite_frames = SubResource("SpriteFrames_r47vg")
animation = &"idle"

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-4.05312e-06, 1.2078)
scale = Vector2(1.01176, 1)
shape = SubResource("CapsuleShape2D_xa0a6")

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(-0.159836, 0.147491)
scale = Vector2(0.579483, 0.46468)
texture = ExtResource("3_v4esw")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-0.00524902, -2.78943)
scale = Vector2(0.239078, 0.199132)
sprite_frames = SubResource("SpriteFrames_f4rvq")
animation = &"explode"

[node name="sfxThrust" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vkqyy")
volume_db = 1.0

[node name="sfxIdle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bqul1")
volume_db = 24.0

[node name="sfxShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_pxded")
volume_db = -9.0

[node name="sfxExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_t2yyb")

[node name="sfxStopShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4sqq7")
volume_db = 1.0

[node name="sfxShield" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_g6tl0")
volume_db = 1.0
